--- a/WebStore/Views/Home/Index.cshtml
+++ b/WebStore/Views/Home/Index.cshtml
@@ -1,9 +1,59 @@
-﻿@{
+﻿@model WebStore.Models.ViewModel
+
+@{
     ViewBag.Title = "Home Page";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<main>
-    <section class="row" aria-labelledby="aspnetTitle">
-        <h1 id="title">In development.</h1>
-    </section>
-</main>
+<!DOCTYPE html>
+<html>
+
+<head>
+    <title>SEE ME</title>
+
+    <style>
+
+        .a-blank {
+            color: inherit;
+            text-decoration: none;
+        }
+
+        .a-blank:hover {
+            color: #1e9469;
+        }
+
+    </style>
+
+
+</head>
+
+<body>
+
+    <div class="alert alert-warning text-center" role="alert">
+        This site is a work in progress.
+    </div>
+
+    <h2 class="text-center">Product Categories</h2>
+
+    <div class="container-fluid">
+        <div class="d-flex flex-row">
+            @foreach (WebStore.Models.Category category in Model.Categories)
+            {
+                <a href="#" class="card card-row mb-3 border-0 a-blank" style="width: 18rem; margin-right: 10px;" onclick="alert('This is the content view for category: @category.Name')">
+                    <img src="@Url.Action("GetImage", "Images", new { id = category.ImageID, height = 300})" alt="[ ! ]" />
+
+                    <div class="card-body text-center">
+                        <h5 class="card-title mb-2 text-body-secondary">@Html.DisplayFor(m => category.Name)</h5>
+                    </div>
+                </a>
+            }
+        </div>
+    </div>
+
+
+
+
+
+</body>
+
+</html>
