--- a/WebStore/Views/Shared/_Layout.cshtml
+++ b/WebStore/Views/Shared/_Layout.cshtml
@@ -16,17 +16,18 @@
         }
     </style>
 
-    <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-dark"> <!--navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-dark-->
         <div class="container">
+
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+
             <a href="@Url.Action("Index", "Home")" class="navbar-brand">
                 <img src="@Url.Action("GetImage", "Images", new { image_name = "TechStoreLogo.png", height = 50 })" alt="[ # ]" />
             </a>
 
             @Html.ActionLink("Tech Store", "Index", "Home", new { area = "" }, new { @class = "navbar-brand nav-title-link" })
-            <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" title="Toggle navigation" aria-controls="navbarSupportedContent"
-                    aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
             <div class="collapse navbar-collapse d-sm-inline-flex justify-content-between">
                 <ul class="navbar-nav flex-grow-1">
                     <li>@Html.ActionLink("Home", "Index", "Home", new { area = "" }, new { @class = "nav-link" })</li>
@@ -35,7 +36,14 @@
                 </ul>
             </div>
         </div>
+
+
+        <a href="#" onclick="alert('Welcome user!')">
+            <img src="@Url.Action("GetUserProfileImage", "Images", new { userID = 1 })" class="rounded-circle" alt="User Profile Image" />
+        </a>
+
     </nav>
+
     <div class="container body-content">
         @RenderBody()
         <hr />
@@ -49,5 +57,10 @@
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-eDexs70EO7wkLVW93eKdqG5ElXlFOvYjSmP++BL8PL4m3lq5qEWitMQ6Ir7VbpE" crossorigin="anonymous"></script>
+
+
 </body>
 </html>
