--- a/WebStore/Views/Home/Index.cshtml
+++ b/WebStore/Views/Home/Index.cshtml
@@ -18,8 +18,20 @@
             text-decoration: none;
         }
 
-        .a-blank:hover {
-            color: #1e9469;
+        .a-blank:hover,
+        .card:hover .card-text h5 {
+            color: #1e9469 !important;
+            text-decoration: none !important;
+        }
+
+        .card-text h5 {
+            font-size: .875rem;
+            font-weight: 500;
+            line-height: 2rem;
+            text-align: center;
+            color: rgb(232, 230, 227);
+            width: 100%;
+            word-break: break-word;
         }
 
     </style>
@@ -29,21 +41,56 @@
 
 <body>
 
-    <div class="alert alert-warning text-center" role="alert">
+    <div class="alert alert-warning text-center" role="alert" style="margin-bottom:50px">
         This site is a work in progress.
     </div>
 
-    <h2 class="text-center">Product Categories</h2>
+
+    <div id="featuredCarousel" class="carousel slide" style="margin-bottom:50px">
+
+        <div class="carousel-indicators">
+            <button type="button" data-bs-target="#featuredCarousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+            <button type="button" data-bs-target="#featuredCarousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
+            <button type="button" data-bs-target="#featuredCarousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
+        </div>
+
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img src="https://placehold.co/900x300/1e9469/white?text=Product+1" class="d-block w-100 img-fluid" alt="Slide 1">
+            </div>
+            <div class="carousel-item">
+                <img src="https://placehold.co/900x300/1e9469/white?text=Product+2" class="d-block w-100 img-fluid" alt="Slide 2">
+            </div>
+            <div class="carousel-item">
+                <img src="https://placehold.co/900x300/1e9469/white?text=Product+3" class="d-block w-100 img-fluid" alt="Slide 3">
+            </div>
+        </div>
+
+        <button class="carousel-control-prev" type="button" data-bs-target="#featuredCarousel" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+        </button>
+
+        <button class="carousel-control-next" type="button" data-bs-target="#featuredCarousel" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+        </button>
+
+    </div>
+
+
+
+    <h2 class="text-center" style="margin-top:25px;margin-bottom:25px;">Product Categories</h2>
 
     <div class="container-fluid">
         <div class="d-flex flex-row">
             @foreach (WebStore.Models.Category category in Model.Categories)
             {
-                <a href="#" class="card card-row mb-3 border-0 a-blank" style="width: 18rem; margin-right: 10px;" onclick="alert('This is the content view for category: @category.Name')">
+                <a href="#" class="card card-row mb-3 border-0 a-blank bg-transparent" style="width: 18rem; margin-right: 10px;" onclick="alert('This is the content view for category: @category.Name')">
                     <img src="@Url.Action("GetImage", "Images", new { id = category.ImageID, height = 300})" alt="[ ! ]" />
 
-                    <div class="card-body text-center">
-                        <h5 class="card-title mb-2 text-body-secondary">@Html.DisplayFor(m => category.Name)</h5>
+                    <div class="card-text">
+                        <h5 class="card-text">@Html.DisplayFor(m => category.Name)</h5>
                     </div>
                 </a>
             }
