Navigation bar improved by a lot.

--- a/WebStore/Views/Home/Index.cshtml
+++ b/WebStore/Views/Home/Index.cshtml
@@ -41,7 +41,7 @@
 
 <body>
 
-    <div class="alert alert-warning text-center" role="alert" style="margin-bottom:50px">
+    <div class="alert alert-dark text-center" role="alert" style="margin-bottom:50px">
         This site is a work in progress.
     </div>
 
