--- a/WebStore/Views/Shared/_Layout.cshtml
+++ b/WebStore/Views/Shared/_Layout.cshtml
@@ -28,6 +28,12 @@
             transform: translateX(-50%);
             text-align: center;
         }
+
+        text-link {
+            text-decoration: none !important;
+            color: inherit !important;
+        }
+
     </style>
 
 </head>
@@ -52,10 +58,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
 
     <script>
-        function submitSearch(event) {
-            event.preventDefault(); // Prevents the default form submission behavior
-            alert('Search Text: ' + document.getElementById('navbarSearch').value);
-        }
 
         function toggleUserModal() {
             alert('Hello user!');
@@ -63,6 +65,7 @@
             var myModal = new bootstrap.Modal(document.getElementById('myModal'));
             myModal.show();
         }
+
     </script>
 
     
