--- a/WebStore/Views/Shared/_NavigationBar.cshtml
+++ b/WebStore/Views/Shared/_NavigationBar.cshtml
@@ -126,12 +126,13 @@
         <div class="ng-user">
             <div class="dropdown">
                 <a href="#" role="button" id="userDropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <!-- Migrate over to using GetImage - this file needs a model to reference the user's login session -->
                     <img src="@Url.Action("GetUserProfileImage", "Images", new { userID = 1 })" class="rounded-circle" alt="User Profile Image" />
                 </a>
                 <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="userDropdown">
                     <!-- Add dropdown items as needed -->
-                    <li><a class="dropdown-item" href="@Url.Action("Profile", "User", new { userID = 1 })">Profile</a></li>
-                    <li><a class="dropdown-item" href="@Url.Action("Index", "User")">View All Users</a></li>
+                    <li><a class="dropdown-item" href="@Url.Action("Profile", "Users", new { userID = 1 })">Profile</a></li>
+                    <li><a class="dropdown-item" href="@Url.Action("Index", "Users")">View All Users</a></li>
                     <li><a class="dropdown-item" href="#">Settings</a></li>
                     <li><hr class="dropdown-divider"></li>
                     <li><a class="dropdown-item" href="#" onclick="alert('Logging you out...')">Logout</a></li>
