--- a/WebStore/Views/Products/Products.cshtml
+++ b/WebStore/Views/Products/Products.cshtml
@@ -42,7 +42,7 @@
             text-decoration: none !important;
         }
 
-    .add-to-card {
+    .add-to-cart {
         background-color: #1e9469;
         border: 1px solid #186e57;
         color: white;
