--- a/WebStore/Views/Shared/_Layout.cshtml
+++ b/WebStore/Views/Shared/_Layout.cshtml
@@ -29,10 +29,48 @@
             text-align: center;
         }
 
-        text-link {
+        .text-link {
             text-decoration: none !important;
             color: inherit !important;
         }
+
+            .text-link:hover {
+                color: #1e9469 !important;
+                text-decoration: none !important;
+            }
+
+        .btn-primary {
+            background-color: #1e9469;
+            border: 1px solid #186e57;
+            color: white;
+        }
+
+            .btn-primary:hover {
+                background-color: #136144;
+            }
+
+
+        /* Debug Border Styles */
+        .dbg-1 {
+            border: 2.5px solid red !important;
+        }
+
+        .dbg-2 {
+            border: 2px dashed orange !important;
+        }
+
+        .dbg-3 {
+            border: 1.5px solid green !important;
+        }
+
+        .dbg-4 {
+            border: 1px dashed blue !important;
+        }
+
+        .dbg-5 {
+            border: 1px solid purple !important;
+        }
+
 
     </style>
 
