--- a/WebStore/Views/Home/Home.cshtml
+++ b/WebStore/Views/Home/Home.cshtml
@@ -11,6 +11,11 @@
 <head>
     <style>
 
+        .carousel {
+            height: inherit;
+            width: 90%;
+            margin: 30px 10px;
+        }
 
         .card-row {
         /* Horizontal row of cards */
@@ -66,83 +71,82 @@
 
 <body>
 
-    <div class="alert alert-dark text-center" role="alert" style="margin-bottom:50px">
-        This site is a work in progress.
-    </div>
 
 
-    <!-- Banner adds for products being sold that link to product details or filtered results? -->
-    <div id="featuredCarousel" class="carousel slide" style="margin-bottom:50px">
 
-        <div class="carousel-indicators">
-            <button type="button" data-bs-target="#featuredCarousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-            <button type="button" data-bs-target="#featuredCarousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
-            <button type="button" data-bs-target="#featuredCarousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
-        </div>
+    <div class="page">
+        <!-- Banner adds for products being sold that link to product details or filtered results? -->
+        <div id="featuredCarousel" class="carousel slide" style="margin-bottom:50px">
 
-        <div class="carousel-inner">
-            <div class="carousel-item active">
-                <img src="https://placehold.co/900x300/1e9469/white?text=Product+1" class="d-block w-100 img-fluid" alt="Slide 1">
+            <div class="carousel-indicators">
+                <button type="button" data-bs-target="#featuredCarousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#featuredCarousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                <button type="button" data-bs-target="#featuredCarousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
             </div>
-            <div class="carousel-item">
-                <img src="https://placehold.co/900x300/1e9469/white?text=Product+2" class="d-block w-100 img-fluid" alt="Slide 2">
-            </div>
-            <div class="carousel-item">
-                <img src="https://placehold.co/900x300/1e9469/white?text=Product+3" class="d-block w-100 img-fluid" alt="Slide 3">
-            </div>
-        </div>
 
-        <button class="carousel-control-prev" type="button" data-bs-target="#featuredCarousel" data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-        </button>
-
-        <button class="carousel-control-next" type="button" data-bs-target="#featuredCarousel" data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-        </button>
-
-    </div>
-
-
-    <h2 class="text-center" style="margin-top:25px;margin-bottom:25px;">Product Categories</h2>
-
-
-
-    <!-- use vw for relative sizes -->
-    <div class="container-fluid card-row">
-
-        <!-- Category cards -->
-        @foreach (WebStore.Models.Category category in Model.Categories)
-        {
-            <a class="card text-link" id="category-card" href="@Url.Action("Index", "Products", new { category = category.CategoryID})">
-
-                <img src="@Url.Action("GetImage", "Images", new { id = category.ImageID, height = 300})" alt="@category.Name" class="card-main" />
-                <div class="card-title">@Html.DisplayFor(m => category.Name)</div>
-
-            </a>
-        }
-
-        <!-- View all card -->
-        <a class="card text-link" id="view-all-card" href="@Url.Action("Index", "Products")">
-
-            <div class="card-main d-flex align-items-center justify-content-center">
-                <div id="view-all">
-                    <i class="bi bi-arrow-right-circle" style="font-size: 5vw; margin-bottom:10%;"></i>
-                    <span style="font-size: 1vw;">View All Products</span>
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <a href="@Url.Action("Index", "Products", new {searchPhrase = "Sony"})"><img src="@Url.Action("GetImage", "Images", new {image_name = "Promo_Sony_Banner.png"})" class="d-block w-100 img-fluid" alt="Slide 1"></a>
+                </div>
+                <div class="carousel-item">
+                    <a href="@Url.Action("Index", "Products", new {searchPhrase = "Samsung"})"><img src="@Url.Action("GetImage", "Images", new {image_name = "Promo_Samsung_Banner.png"})" class="d-block w-100 img-fluid" alt="Slide 2"></a>
+                </div>
+                <div class="carousel-item">
+                    <a href="@Url.Action("Details", "Products", new {productID = 9})"><img src="@Url.Action("GetImage", "Images", new {image_name = "Promo_Corsair_Banner.png"})" class="d-block w-100 img-fluid" alt="Slide 3"></a>
                 </div>
             </div>
 
-            <!-- NO FOOTER
-            <div class="card-footer bg-transparent">
+            <button class="carousel-control-prev" type="button" data-bs-target="#featuredCarousel" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+
+            <button class="carousel-control-next" type="button" data-bs-target="#featuredCarousel" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+
+        </div>
+
+
+        <h2 class="text-center" style="margin-top:25px;margin-bottom:25px;">Product Categories</h2>
+
+
+
+        <!-- use vw for relative sizes -->
+        <div class="container-fluid card-row">
+
+            <!-- Category cards -->
+            @foreach (WebStore.Models.Category category in Model.Categories)
+            {
+                <a class="card text-link" id="category-card" href="@Url.Action("Index", "Products", new { category = category.CategoryID})">
+
+                    <img src="@Url.Action("GetImage", "Images", new { id = category.ImageID, height = 300})" alt="@category.Name" class="card-main" />
+                    <div class="card-title">@Html.DisplayFor(m => category.Name)</div>
+
+                </a>
+            }
+
+            <!-- View all card -->
+            <a class="card text-link" id="view-all-card" href="@Url.Action("Index", "Products")">
+
+                <div class="card-main d-flex align-items-center justify-content-center">
+                    <div id="view-all">
+                        <i class="bi bi-arrow-right-circle" style="font-size: 5vw; margin-bottom:10%;"></i>
+                        <span style="font-size: 1vw;">View All Products</span>
+                    </div>
+                </div>
+
+                <!-- NO FOOTER
+                <div class="card-footer bg-transparent">
                 
-            </div>
-            -->
-    </a>
+                </div>
+                -->
+        </a>
 
-    </div>
+        </div>
 
-
+</div>
 
 
 </body>
