--- a/WebStore/Views/Shared/_Layout.cshtml
+++ b/WebStore/Views/Shared/_Layout.cshtml
@@ -21,6 +21,21 @@
             color: white;
         }
 
+        .container {
+            max-width: 95%;
+        }
+
+        .page {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+
+        hr {
+            border: 1;
+            width: 100%
+        }
+
         .abs-centre {
             position: absolute;
             width: auto;
@@ -83,6 +98,11 @@
 
 
     <div class="container body-content">
+
+        <div class="alert alert-dark text-center" role="alert" style="margin-bottom:50px">
+            This site is a work in progress.
+        </div>
+
         @RenderBody()
         <hr />
         <footer>
