Updated the Product Details page with an image gallery, showcasing all linked images. Formatting on this page and home.

--- a/WebStore/Views/Home/Home.cshtml
+++ b/WebStore/Views/Home/Home.cshtml
@@ -18,10 +18,10 @@
         }
 
         .card-row {
-        /* Horizontal row of cards */
+            /* Horizontal row of cards */
             display: flex;
             flex-wrap: nowrap;
-            justify-content: space-between;
+            justify-content: center;
         }
 
             .card-row .card {
