--- a/WebStore/Views/Shared/_NavigationBar.cshtml
+++ b/WebStore/Views/Shared/_NavigationBar.cshtml
@@ -131,7 +131,7 @@
                 </a>
                 <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="userDropdown">
                     <!-- Add dropdown items as needed -->
-                    <li><a class="dropdown-item" href="@Url.Action("Profile", "Users", new { userID = 1 })">Profile</a></li>
+                    <li><a class="dropdown-item" href="@Url.Action("UserProfile", "Users", new { userID = 1 })">Profile</a></li>
                     <li><a class="dropdown-item" href="@Url.Action("Index", "Users")">View All Users</a></li>
                     <li><a class="dropdown-item" href="#">Settings</a></li>
                     <li><hr class="dropdown-divider"></li>
